--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -30,11 +30,6 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
 // echo "</pre>";
 ?>
 
-<div class="resource-title">
-<?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
-<h3 class="label"><?php echo $translate('Item'); ?></h3>
-</div>
-
 <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
     <?php if ($fullWidthMainHasBlocks): ?>
@@ -73,6 +68,12 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
             <?php $this->trigger('view.show.before'); ?>
 
             <div class="main-with-sidebar cell medium-8 margin-bottom-2 xlarge-margin-bottom-3">
+            <div class="small-only">
+                <div class="resource-title padding-bottom-1">
+                    <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
+                    <h2 class="label"><?php echo $translate('Item'); ?></h2>
+                </div>
+            </div>
                 <?php 
                 // Display the main viewer
                 if ($youtubeViewer !== null) {
@@ -84,6 +85,12 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
                 ?>
             </div>
             <div class="right-sidebar cell medium-4 medium-padding-vertical-1 xlarge-padding-horizontal-2">
+                <div class="medium-up">
+                    <div class="resource-title padding-bottom-1">
+                        <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
+                        <h2 class="label"><?php echo $translate('Item'); ?></h2>
+                    </div>
+                </div>
                 <?php echo $fullWidthMainBlockContent->getBlocks(); ?>
             </div>
         </div>
@@ -91,7 +98,10 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
     <?php endif; ?>
 
     <?php if ($mainWithSidebarHasBlocks || $leftSidebarHasBlocks || $rightSidebarHasBlocks): ?>
-    
+        <div class="resource-title padding-bottom-1">
+            <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
+            <h2 class="label"><?php echo $translate('Item'); ?></h2>
+        </div>
     <?php 
     if ($leftSidebarHasBlocks && $rightSidebarHasBlocks) {
         $sidebarWidth = '3';
