--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -69,7 +69,7 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
 
             <div class="main-with-sidebar cell medium-8 margin-bottom-2 xlarge-margin-bottom-3">
             <div class="small-only">
-                <div class="resource-title padding-bottom-1">
+                <div class="resource-title padding-bottom-1 padding-left-1">
                     <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
                     <h2 class="label"><?php echo $translate('Item'); ?></h2>
                 </div>
