Reverted to original title placement

--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -30,6 +30,11 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
 // echo "</pre>";
 ?>
 
+<div class="resource-title">
+    <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
+    <h2 class="label"><?php echo $translate('Item'); ?></h2>
+</div>
+
 <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
     <?php if ($fullWidthMainHasBlocks): ?>
@@ -66,12 +71,7 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
     <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
         <div class="full-width grid-x grid-padding-x">
             <?php $this->trigger('view.show.before'); ?>
-
             <div class="main-with-sidebar cell medium-8 margin-bottom-2 xlarge-margin-bottom-3">
-                <div class="resource-title padding-bottom-1 padding-left-1">
-                    <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
-                    <h2 class="label"><?php echo $translate('Item'); ?></h2>
-                </div>
                 <?php 
                 // Display the main viewer
                 if ($youtubeViewer !== null) {
@@ -90,10 +90,6 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
     <?php endif; ?>
 
     <?php if ($mainWithSidebarHasBlocks || $leftSidebarHasBlocks || $rightSidebarHasBlocks): ?>
-        <div class="resource-title padding-bottom-1">
-            <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
-            <h2 class="label"><?php echo $translate('Item'); ?></h2>
-        </div>
     <?php 
     if ($leftSidebarHasBlocks && $rightSidebarHasBlocks) {
         $sidebarWidth = '3';
