--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -52,7 +52,7 @@ $thumbnailType = $block->dataValue('thumbnail_type');
             <?php endif; ?>
         </div>
         <div class="learn-more margin-bottom-1">
-            <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
+            <h2 class="hollow button medium warning"><?php echo $item->link("Learn more"); ?></h2>
         </div>
     </div>
     <?php endforeach; ?>
