--- a/view/common/block-template/media-caption-text-metadata.phtml
+++ b/view/common/block-template/media-caption-text-metadata.phtml
@@ -62,7 +62,7 @@ $thumbnailType = $block->dataValue('thumbnail_type');
                 <?php endif;
             ?>
             <div class="learn-more flex-container align-center">
-                <button class="button medium warning hollow"><?php echo $item->link("View full item"); ?></button>
+                <button class="button medium warning hollow"><?php echo $item->link("Learn more"); ?></button>
             </div>
         </div>
         <?php endforeach; ?>
