--- a/view/common/block-template/media-caption-text-metadata.phtml
+++ b/view/common/block-template/media-caption-text-metadata.phtml
@@ -43,13 +43,22 @@ $thumbnailType = $block->dataValue('thumbnail_type');
                 <div class="separator-center metadata margin-vertical-1">
                     <h2><?php echo $item->displayTitle(); ?></h2>
                     <?php if ($alternative = $item->value('dcterms:alternative')): ?>
-                        <h2 class="h4 italic-font"><small><?= htmlspecialchars($alternative) ?></small></h2>
+                        <h2 class="h4 italic-font alternative"><small><?= htmlspecialchars($alternative) ?></small></h2>
+                    <?php endif; ?>
+                    <?php if ($location = $item->value('curation:location')): ?>
+                        <h2 class="h4 location"><small><?= htmlspecialchars($location) ?></small></h2>
                     <?php endif; ?>
                 </div>
             <?php elseif ($showTitleOption === 'file_name'): ?>
                 <div class="separator-center metadata margin-vertical-1">
                     <h2><?php echo $media->displayTitle(); ?></h2>
                 </div>
+                <?php if ($alternative = $item->value('dcterms:alternative')): ?>
+                    <h2 class="h4 italic-font alternative"><small><?= htmlspecialchars($alternative) ?></small></h2>
+                <?php endif; ?>
+                <?php if ($location = $item->value('curation:location')): ?>
+                    <h2 class="h4 location"><small><?= htmlspecialchars($location) ?></small></h2>
+                <?php endif; ?>
             <?php endif; ?>
             <?php $caption = $attachment->caption(); ?>
             <?php if ($caption): ?>
