Revised font colours for intro sections

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -542,6 +542,9 @@ nav.breadcrumbs {
   p.h4 small {
     color: $white;
   }
+  p.h5 {
+    color: $warning-color;
+  }
   .learn-more .button a {
     color: $black;
   }
