--- a/view/common/block-template/media-text-only.phtml
+++ b/view/common/block-template/media-text-only.phtml
@@ -51,7 +51,7 @@ $lang = $filterLocale ? $this->lang() : null;
             <?= $caption ?>
         </div>
         <div class="learn-more">
-            <h2 class="button medium warning"><?= $item->link("Learn more") ?></h2>
+            <h2 class="button medium warning hollow"><?= $item->link("Learn more") ?></h2>
         </div>
     </div>
 </div>
