Integrated revised Content Warning into theme

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3326,8 +3326,8 @@ max-width: rem-calc(700);
 /*Warning Bar*/
 /*Content warning banner*/ 
 .peek-a-bar {
-  padding: 0.75rem 1rem;
-  background-color: $primary-color;
+  padding: 0.5rem 1rem;
+  background-color: $secondary-color;
   }
   
   .warning-bar {
