--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -99,6 +99,10 @@ a.nav-header:visited {
   left: rem-calc(8);
 }
 
+.submenu-toggle:after {
+  border-color: $primary-color rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
+}
+
 header .top-bar {
   padding: 0.25 * $global-padding $global-padding 0;
   @include breakpoint(large) {
@@ -1457,6 +1461,21 @@ dd.value a {
   }
   @include breakpoint(large) {
     height: 80vh !important;
+  }
+} 
+
+/*IIIF Presentation for Item Show*/ 
+.full-width-main .iiif_presentation iframe,
+.main-with-sidebar .iiif_presentation iframe {
+    height: 60vh !important;
+  @include breakpoint(medium) {
+    height: 75vh !important;
+  }
+  @include breakpoint(large) {
+    height: 85vh !important;
+  }
+  @include breakpoint(xlarge) {
+    height: 90vh !important;
   }
 } 
 
