Revised a:focus colour

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -522,6 +522,9 @@ button a,
   a.button {
       color: $white;
   }
+  a:focus {
+    color: inherit;
+  }
   h2 {
     color: $warning-color;
   }
