--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1225,6 +1225,41 @@ display: none;
   line-height: 1.5;
   }
 
+/*Browse Preview - Masonry*/ 
+.resource-grid-mosaic .resource__thumbnail img {
+  // border-radius: rem-calc(8) rem-calc(8) 0 0 !important;
+  max-height: 100%;
+  object-fit: cover;
+  width: 100%;
+}
+
+  .resource-grid-mosaic .grid-sizer, 
+   .resource-grid-mosaic .resource-masonry {
+    width: 49%;
+    @include breakpoint(medium) {
+      width: 32%;
+    }
+  }
+
+.resource-grid-mosaic .resource__thumbnail {
+  line-height: 1;
+  width: 100%;
+}
+
+.resource-grid-mosaic .gutter-sizer {
+    width: rem-calc(8);
+    @include breakpoint(medium) {
+      width: rem-calc(15);
+      }
+}
+
+.resource-grid-mosaic .resource__content {
+  padding: rem-calc(5);
+  @include breakpoint(medium) {
+    padding: rem-calc(8);
+    }
+}
+
 /*External Content*/ 
 
 .external-content .left.media.file,
