Added links to Bluesky

--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -126,9 +126,9 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
                                     <noscript><img class="" src="https://www.library.manchester.ac.uk/assets/images/design/icon-facebook-large.png" width="40" height="40" alt="Facebook page for The University of Manchester Library"></noscript>
                                     </a>
                                 </li>
-                                <li><a href="https://twitter.com/UoMLibrary">
-                                    <img class="lazy" src="https://www.library.manchester.ac.uk/assets/images/design/icon-twitter-large.png" width="40" height="40" data-original="/assets/images/design/icon-twitter-large.png" alt="Twitter page for The University of Manchester Library">
-                                    <noscript><img class="" src="https://www.library.manchester.ac.uk/assets/images/design/icon-twitter-large.png" width="40" height="40" alt="Twitter page for The University of Manchester Library"></noscript>
+                                <li><a href="https://bsky.app/profile/uomlibrary.bsky.social">
+                                    <img class="lazy" src="https://assets.manchester.ac.uk/library/images/design/icon-bluesky-blue-40x40.png" width="40" height="40" data-original="https://assets.manchester.ac.uk/library/images/design/icon-bluesky-blue-40x40.png" alt="Bluesky page for The University of Manchester Library">
+                                    <noscript><img class="" src="https://assets.manchester.ac.uk/library/images/design/icon-bluesky-blue-40x40.png" width="40" height="40" alt="Bluesky page for The University of Manchester Library"></noscript>
                                     </a>
                                 </li>
                                 <li><a href="https://www.instagram.com/uomlibrary/">
