Added media-embed multiples option

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3125,6 +3125,10 @@ section.image-banner {
   text-decoration: underline;
 }
 
+.caption.caption-multiples {
+  border-left: none;
+}
+
 /*Resource Grid*/ 
 .resource-grid {
   display: grid;
