Revised CORALA content warnings

--- a/view/templates/content-warning-banner.phtml
+++ b/view/templates/content-warning-banner.phtml
@@ -26,13 +26,13 @@ function showContentBanner($site, $currentLocale) {
             $warnings = [
                 'corala-es' => [
                     'message' => 'Aviso: Este sitio contiene material que puede resultar ofensivo.',
-                    'link' => '/s/corala-es/page/introduccion#content_warning',
-                    'policy_text' => 'Consulte nuestra política sobre material sensible'
+                    'link' => '/s/corala-es/page/advertencia_sobre_el_contenido',
+                    'policy_text' => 'Lea nuestra declaración completa sobre el contenido.'
                 ],
                 'corala' => [
-                    'message' => 'Content Warning: This site contains material you may find offensive.',
-                    'link' => '/s/corala/page/introduction#content_warning',
-                    'policy_text' => 'View our statement on sensitive material'
+                    'message' => 'This exhibition contains material that some viewers may find offensive and/or distressing.',
+                    'link' => '/s/corala/page/content_warning',
+                    'policy_text' => 'Please read our full statement on the content.'
                 ],
                 'default-es' => [
                     'message' => 'Advertencia de contenido: este sitio contiene material que puede resultarle molesto.',
