Revised h2 font size

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -13,6 +13,14 @@ $thumbnail-shadow-hover: 0 0 6px 1px rgba($primary-color, 0.5);
 @import 'foundation-core';
 @import 'omeka';
 
+/*Font Sizes*/ 
+h2,
+.h2 {
+@include breakpoint(large) {
+  font-size: 1.4rem;
+  }
+}
+
 .site-title {
   max-width: calc(100vw - rem-calc(120));
   @include breakpoint(355) {
