--- a/view/common/block-template/html-content-warning.phtml
+++ b/view/common/block-template/html-content-warning.phtml
@@ -10,7 +10,7 @@
     <div class="content-warning-panel flex-container align-center align-middle">
         <i class="fas fa-exclamation-triangle"></i>
     </div>
-    <div class="content-warning-text padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3 padding-left-1 medium-padding-left-2 large-padding-left-3">
+    <div class="content-warning-text padding-vertical-1 medium-padding-vertical-2 padding-left-1 medium-padding-left-2 large-padding-left-3">
             <?= $block->dataValue('html', '') ?>
         </div>
     </div>
