--- a/view/common/block-template/media-caption-text-metadata.phtml
+++ b/view/common/block-template/media-caption-text-metadata.phtml
@@ -48,6 +48,10 @@ $thumbnailType = $block->dataValue('thumbnail_type');
                     <?php if ($location = $item->value('curation:location')): ?>
                         <h2 class="h4 location"><small><?= htmlspecialchars($location) ?></small></h2>
                     <?php endif; ?>
+                    <?php $date = $item->value("dcterms:date"); ?>
+                    <?php if ($date): ?>
+                        <h2 class="h4 date"><small><?php echo $date; ?></small></h2>
+                    <?php endif; ?>
                 </div>
             <?php elseif ($showTitleOption === 'file_name'): ?>
                 <div class="separator-center metadata margin-vertical-1">
@@ -56,6 +60,10 @@ $thumbnailType = $block->dataValue('thumbnail_type');
                 <?php if ($alternative = $item->value('dcterms:alternative')): ?>
                     <h2 class="h4 italic-font alternative"><small><?= htmlspecialchars($alternative) ?></small></h2>
                 <?php endif; ?>
+                <?php $date = $item->value("dcterms:date"); ?>
+                    <?php if ($date): ?>
+                        <h2 class="h4 date"><small><?php echo $date; ?></small></h2>
+                    <?php endif; ?>
                 <?php if ($location = $item->value('curation:location')): ?>
                     <h2 class="h4 location"><small><?= htmlspecialchars($location) ?></small></h2>
                 <?php endif; ?>
