--- a/view/common/block-template/los-card-dynamic.phtml
+++ b/view/common/block-template/los-card-dynamic.phtml
@@ -1,5 +1,5 @@
-<div class="list-of-sites">
-    <div class="site-list layout-card">
+<div>
+    <div class="list-of-sites-dynamic site-list layout-card">
         <?php foreach($sites as $site): ?>
             <?php
             $thumbnail = $thumbnails ? $site->thumbnail() : null;
